--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_login_register.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_login_register.xml
@@ -5,11 +5,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".layout.LoginRegisterActivity">
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+    tools:context=".layout.LoginRegisterActivity"/>
