--- a/Menghitung_Mimpi/app/src/main/res/values-night/themes.xml
+++ b/Menghitung_Mimpi/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,6 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">#00D09E</item>
     </style>
 </resources>
