--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,9 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         android:background="@drawable/rounded_bottom_nav"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
