--- a/Menghitung_Mimpi/app/src/main/res/menu/bottom_nav.xml
+++ b/Menghitung_Mimpi/app/src/main/res/menu/bottom_nav.xml
@@ -8,17 +8,17 @@
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Savings"
-        android:icon="@drawable/analysis" />
+        android:title="Riwayat"
+        android:icon="@drawable/riwayat" />
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="History"
-        android:icon="@drawable/category" />
+        android:title="Tabungan"
+        android:icon="@drawable/tabungan" />
 
     <item
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Profile"
+        android:title="Akun"
         android:icon="@drawable/profile"/>
 </menu>
