--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_login.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_login.xml
@@ -63,7 +63,7 @@
             app:layout_constraintVertical_bias="0.261" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/etPasswordLoginPage"
             android:layout_width="320dp"
             android:layout_height="35dp"
             android:background="@drawable/rounded_corner_background"
