--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_login.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="391dp"
-        android:layout_height="620dp"
+        android:layout_width="413dp"
+        android:layout_height="615dp"
         android:background="@drawable/rounded_top_corners"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,10 +27,10 @@
             android:textColor="#020202"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.128"
+            app:layout_constraintHorizontal_bias="0.155"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.126" />
+            app:layout_constraintVertical_bias="0.122" />
 
         <EditText
             android:id="@+id/etEmailLoginPage"
@@ -42,6 +42,7 @@
             android:inputType="text"
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
@@ -57,7 +58,7 @@
             android:textColor="#070707"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.106"
+            app:layout_constraintHorizontal_bias="0.131"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.261" />
@@ -71,6 +72,7 @@
             android:inputType="textPassword"
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
