--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav" />
 
