--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_new_password.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_new_password.xml
@@ -8,8 +8,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout5"
-        android:layout_width="391dp"
-        android:layout_height="620dp"
+        android:layout_width="413dp"
+        android:layout_height="617dp"
         android:background="@drawable/rounded_top_corners"
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -28,6 +28,7 @@
             android:inputType="textPassword"
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
@@ -44,6 +45,7 @@
             android:inputType="textPassword"
             android:paddingLeft="10sp"
             android:paddingRight="10sp"
+            android:textColor="#000000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
