--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_forgot_password.xml
@@ -14,7 +14,7 @@
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
@@ -54,8 +54,9 @@
             android:ems="10"
             android:hint="example@example.com"
             android:inputType="text"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.492"
