--- a/Menghitung_Mimpi/app/src/main/res/layout/activity_register.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,7 @@
         android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0">
@@ -27,9 +27,9 @@
             android:ems="10"
             android:hint="Full Name"
             android:inputType="text"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
@@ -58,8 +58,9 @@
             android:ems="10"
             android:hint="example@example.com"
             android:inputType="text"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
@@ -86,8 +87,11 @@
             android:layout_height="35dp"
             android:background="@drawable/rounded_corner_background"
             android:ems="10"
-            android:hint=" + 123 456 789"
+            android:hint="081234567890"
             android:inputType="text"
+            android:paddingLeft="15sp"
+            android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
@@ -114,10 +118,11 @@
             android:layout_height="35dp"
             android:background="@drawable/rounded_corner_background"
             android:ems="10"
-            android:hint="DD / MM / YY"
+            android:hint="DD - MM - YY"
             android:inputType="text"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
@@ -158,8 +163,9 @@
             android:background="@drawable/rounded_corner_background"
             android:ems="10"
             android:inputType="textPassword"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
@@ -174,8 +180,9 @@
             android:background="@drawable/rounded_corner_background"
             android:ems="10"
             android:inputType="textPassword"
-            android:paddingLeft="10sp"
+            android:paddingLeft="15sp"
             android:paddingRight="10sp"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.563"
