--- a/Menghitung_Mimpi/app/src/main/res/menu/bottom_nav.xml
+++ b/Menghitung_Mimpi/app/src/main/res/menu/bottom_nav.xml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/homeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Home"
         android:icon="@drawable/icon_home"/>
     <item
-        android:id="@+id/riwayatFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Riwayat"
         android:icon="@drawable/riwayat" />
     <item
-        android:id="@+id/cardFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:title="Card"
+        android:title="Tabungan"
         android:icon="@drawable/tabungan" />
 
     <item
-        android:id="@+id/profileFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:title="Akun"
