--- a/Menghitung_Mimpi/app/src/main/res/layout/fragment_kalkulator_investasi.xml
+++ b/Menghitung_Mimpi/app/src/main/res/layout/fragment_kalkulator_investasi.xml
@@ -1,14 +1,250 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/frameLayout4"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".layout.KalkulatorInvestasiFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="0dp"
+        android:layout_height="674dp"
+        android:layout_marginTop="132dp"
+        android:background="@drawable/rounded_top_corners"
+        android:paddingBottom="110dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" >
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_top_corners">
+
+            <TextView
+                android:id="@+id/textView65"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="28dp"
+                android:text="Jumlah Uang Yang ingin Kamu capai"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/etUangYangInginDicapai"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_background"
+                android:ems="10"
+                android:inputType="text"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView65"
+                app:layout_constraintTop_toBottomOf="@+id/textView65" />
+
+            <TextView
+                android:id="@+id/textView66"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:text="Rp"
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@+id/etUangYangInginDicapai"
+                app:layout_constraintTop_toTopOf="@+id/etUangYangInginDicapai" />
+
+            <TextView
+                android:id="@+id/textView67"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Waktu Kamu mengumpulkan uang ini"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="@+id/etUangYangInginDicapai"
+                app:layout_constraintTop_toBottomOf="@+id/etUangYangInginDicapai" />
+
+            <EditText
+                android:id="@+id/etWaktuMengumpulkanUang"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_background"
+                android:ems="10"
+                android:inputType="text"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView67"
+                app:layout_constraintTop_toBottomOf="@+id/textView67" />
+
+            <TextView
+                android:id="@+id/textView68"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:text="Tahun lagi"
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@+id/etWaktuMengumpulkanUang"
+                app:layout_constraintTop_toTopOf="@+id/etWaktuMengumpulkanUang" />
+
+            <TextView
+                android:id="@+id/textView69"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Uang yang kamu miliki saat ini sebesar"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="@+id/etWaktuMengumpulkanUang"
+                app:layout_constraintTop_toBottomOf="@+id/etWaktuMengumpulkanUang" />
+
+            <EditText
+                android:id="@+id/etUangSaatIniKalkulatorInvestasi"
+                android:layout_width="280dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_background"
+                android:ems="10"
+                android:inputType="text"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView69"
+                app:layout_constraintTop_toBottomOf="@+id/textView69" />
+
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:text="Rp"
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@+id/etUangSaatIniKalkulatorInvestasi"
+                app:layout_constraintTop_toTopOf="@+id/etUangSaatIniKalkulatorInvestasi" />
+
+            <TextView
+                android:id="@+id/textView71"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Kamu akan menabung setiap"
+                android:textColor="#050505"
+                app:layout_constraintStart_toStartOf="@+id/etUangSaatIniKalkulatorInvestasi"
+                app:layout_constraintTop_toBottomOf="@+id/etUangSaatIniKalkulatorInvestasi" />
+
+            <Button
+                android:id="@+id/btnSetiapTahun"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:backgroundTint="#DEF6E1"
+                android:text="Setiap Tahun"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/textView71"
+                app:layout_constraintTop_toBottomOf="@+id/textView71" />
+
+            <Button
+                android:id="@+id/btnSetiapBulan"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:backgroundTint="#DEF6E1"
+                android:text="Setiap Bulan"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/btnSetiapTahun"
+                app:layout_constraintTop_toTopOf="@+id/btnSetiapTahun" />
+
+            <TextView
+                android:id="@+id/textView72"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Kamu akan menambahkan dana pada"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="@+id/textView71"
+                app:layout_constraintTop_toBottomOf="@+id/btnSetiapTahun" />
+
+            <Button
+                android:id="@+id/btnAwalTahun"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="6dp"
+                android:backgroundTint="#DDF5E0"
+                android:text="Awal Tahun"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="@+id/textView72"
+                app:layout_constraintTop_toBottomOf="@+id/textView72" />
+
+            <Button
+                android:id="@+id/btnAkhirBulan"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="28dp"
+                android:backgroundTint="#DDF5E0"
+                android:text="Akhir Bulan"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/btnAwalTahun"
+                app:layout_constraintTop_toTopOf="@+id/btnAwalTahun" />
+
+            <TextView
+                android:id="@+id/textView73"
+                android:layout_width="199dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:text="Kamu akan investasi di produk yang returnya?"
+                android:textColor="#000000"
+                app:layout_constraintStart_toStartOf="@+id/textView72"
+                app:layout_constraintTop_toBottomOf="@+id/btnAwalTahun" />
+
+            <EditText
+                android:id="@+id/etReturProdukKalkulatorInvestasi"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/rounded_corner_background"
+                android:ems="10"
+                android:inputType="text"
+                android:padding="10dp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <TextView
+                android:id="@+id/textView74"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:text="% /  Tahun"
+                android:textColor="#000000"
+                app:layout_constraintStart_toEndOf="@+id/etReturProdukKalkulatorInvestasi"
+                app:layout_constraintTop_toTopOf="@+id/etReturProdukKalkulatorInvestasi" />
+
+            <Button
+                android:id="@+id/btnHitungKalkulatorInvestasi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Hitung"
+                android:backgroundTint="#00CF9D"
+                app:cornerRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etReturProdukKalkulatorInvestasi" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
+    <TextView
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Kalkulator Investasi"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
